--- a/projetos/taylorswift/html/index.html
+++ b/projetos/taylorswift/html/index.html
@@ -2,14 +2,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taylor Swift</title>
     <link rel="stylesheet" href="../css/root.css">
 </head>
 <body>
     <header class="header">
-
+        <div class="nav-containe">
+            <nav class="container">
+                <ul>
+                        <li class="nav-links"><a href="#home">Home</a></li>
+                        <li class="nav-links"><a href="#film">Film</a></li>
+                        <li class="nav-links"><a href="#merch">Merch</a></li>
+                        <li class="nav-links"><a href="#playlists">Playlists</a></li>
+                        <li class="nav-links"><a href="#tour">Tour</a></li>
+                        <li class="nav-links"><a href="#explore">Explore</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main></main>
+    <main>
+        <section id="home"></section>
+        <section id="film"></section>
+        <section id="merch"></section>
+        <section id="playlists"></section>
+        <section id="tour"></section>
+        <section id="Explore"></section>
+    </main>
     <footer></footer>
 </body>
 </html>
